# r4

./: Dockerfile.extractor  Dockerfile.prerank  Dockerfile.r4rank  Dockerfile.r4rank.amd64  Dockerfile.r4rank.arm64  Dockerfile.r4train  Dockerfile.r4train.amd64  Dockerfile.r4train.arm64  Dockerfile.r4userembedding  Dockerfile.r4userembeddingwithmodel  Dockerfile.r4userembeddingwithmodeltest  Dockerfile.recall  Dockerfile.recommenddebug.amd64  Dockerfile.recommenddebug.arm64  README.md
.github/workflows/: prerank_publish_docker.yaml  update-extractor.yml  update-prerank.yml  update-recall.yml  update_r4rank.yaml  update_r4train.yaml  update_r4userembedding.yaml  update_r4userembedding_with_model.yml  update_r4userembedding_with_model_test.yml  update_recommenddebug.yml
prerank-stages/: README.md  go.mod  go.sum
prerank-stages/api/: knowledge.go
prerank-stages/common/: archive_func.go  common_variable.go  cosine.go  mongodb.go
prerank-stages/config/: algorithm.config  algorithm_config.go
prerank-stages/dev_container/: Dockerfile  build.sh  readme.md
prerank-stages/extractor/: main.go  readme.md
prerank-stages/model/: config.go  entry.go
prerank-stages/prerank/: main.go  readme.md
prerank-stages/protobuf_entity/: entry.pb.go  entry.proto
prerank-stages/recall/: main.go  readme.md
train-rank/: .gitignore  CMakeLists.txt  README.md  version.cmake
train-rank/infra/bertv2rank_deploy/: Dockerfile  build.sh
train-rank/infra/bertv2train_deploy/: Dockerfile  build.sh
train-rank/infra/build_production/: build_r4rank_amd64.sh  build_r4train_amd64.sh  build_recommenddebug_amd64.sh  concat_redis_url.sh  concat_url.sh  deploy_recommenddebug_amd64.sh  recommend_debug.yaml
train-rank/infra/rss_wise_environment/: 001_users.js  deploy.sh  deploy_knowledge_only.sh  deploy_sync.sh  docker-compose-only-knowledge-base-api.yaml  docker-compose.yml  init.sql  remove_infra.sh  restore_mongodump_data.sh  rm_container.sh  start_db.sh
train-rank/infra/test_image/: Dockerfile  build.sh
train-rank/infra/ubuntu_develop/: Dockerfile  build.sh  deploy.sh
train-rank/src/: .gitignore  archive_file.cpp  archive_file.h  bert_v2_rank.cpp  bert_v2_train_executable.cpp  common_tool.cpp  common_tool.h  data_process.cpp  data_process.h  dump_traceinfo.cpp  dump_traceinfo.h  dump_traceinfo_tool.cpp  easylogging++.cc  easylogging++.h  experiment_embedding_similarity_tool.cpp  faiss_article_search.cpp  faiss_article_search.h  http_single_client.cpp  http_single_client.h  knowledgebase_api.cpp  knowledgebase_api.h  recommend_parameter_tune_tool.cpp  rssrank.cpp  rssrank.h  userembedding_calculation.cpp  userembedding_calculation.h  xgboost_macro.hpp
train-rank/src/entity/: entry.h  impression.h  rank_algorithm.h  reco_metadata.cpp  reco_metadata.h
train-rank/src/lr/: feature_extractor.cpp  feature_extractor.h  logistic_regression.cpp  logistic_regression.h  model_serializer.cpp  model_serializer.h
train-rank/src/tools/: embedding_inspector.cpp
train-rank/test/: bert_v2_test.cpp  common_test.cpp  cpprest_test.cpp  data_process_test.cpp  knowledge_api_test.cpp  test_common.h
train-rank/test/experiment/: experiment_similarity_search.cpp
user-embedding/: Cargo.toml  README.md
user-embedding/infra/bertv2_userembedding/: build.sh
user-embedding/infra/build_production/: build_r4userembedding.sh  build_r4userembeddingwithmodel.sh
user-embedding/infra/embedding_develop/: Dockerfile  build.sh
user-embedding/infra/userembedding/: build.sh
user-embedding/infra/userembedding_local/: Dockerfile  build.sh
user-embedding/src/: bertcommon.rs  bertv2.rs  bertv2_userembedding.rs  common.rs  common_test_operation.rs  download_model.rs  embedding_common.rs  entity.rs  knowledge_base_api.rs  lib.rs  userembedding.rs
user-embedding/src/cmd/: build_model_from_local.rs
user-embedding/src/entity/: entry.rs  impression.rs
