[package]
name = "userembedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bson = "2.7.0"
candle-core = { version = "0.3.0" }
candle-nn = "0.3.0"
candle-transformers = "0.3.0"
chrono = "0.4.31"
env_logger = "0.10.0"
float-cmp = "0.9.0"
futures = "0.3.29"
hf-hub = "0.3.2"
lazy_static = "1.4.0"
log = "0.4.20"
mongodb = "2.7.0"
rayon = "1.8.0"
redis = "0.24.0"
serde = "1.0.190"
serde_json = "1.0.107"
text-splitter = "0.4.4"
threadpool = "1.8.1"
tokenizers = "0.14.1"
tokio = {version = "1.33.0",features = ["full"]}
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
reqwest = {version="0.11.23",features = ["json"] }

[[bin]]
name = "bertv2userembedding"
path = "src/bertv2_userembedding.rs"
